<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    tools:context=".view.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:fontFamily="@font/f_bold"
                android:gravity="center"
                android:text="@string/tx_masuk_untuk_mencatat"
                android:textColor="@color/t_dark"
                android:textSize="19sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/bg_et_login"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="22dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_user_solid"
                    android:tint="@color/t_grey" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/bg_transparent"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:hint="@string/tx_username"
                    android:lineHeight="0dp"
                    android:singleLine="true"
                    android:textColor="@color/t_dark"
                    android:textColorHint="@color/t_grey"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/bg_et_login"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="22dp">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/ic_lock"
                    android:tint="@color/t_grey" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/bg_transparent"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:hint="@string/tx_password"
                    android:singleLine="true"
                    android:textColor="@color/t_dark"
                    android:textColorHint="@color/t_grey"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="21dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/bg_btn_login"
                android:fontFamily="@font/f_semibold"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:shadowColor="@color/biru_tua"
                android:text="@string/tx_masuk"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_lupa_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/f_medium"
                android:text="@string/tx_lupa_password"
                android:textColor="@color/t_grey"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/f_medium"
                android:text="@string/tx_belum_punya_akun"
                android:textColor="@color/t_grey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_daftar_disini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="3dp"
                android:fontFamily="@font/f_medium"
                android:text="@string/tx_daftar_disini"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>